--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -28,35 +30,40 @@
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
       <!-- Insert header information here -->
+        <h1>About Us</h1>
+        Welcome to Best Cars dealership, home to the best cars in North America. We deal in selling domestic and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1607746882042-944635dfe10e" alt="CEO">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Michael Anderson</p>
+          <p>Founder & CEO</p>
+          <p class="card-text">Michael founded Best Cars with a vision to redefine the car buying experience.
+            Her leadership and passion for automobiles drive the company forward.</p>
+          <p>michael.anderson@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2" alt="Sales Manager">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Sarah Johnson</p>
+          <p>Sales Manager</p>
+          <p class="card-text">Sarah leads our sales team with a customer-first mindset.
+            She ensures every client finds the right car at the right price.</p>
+          <p>sarah.johnson@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d" alt="Operations Manager">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">David Martinez</p>
+          <p>Operations Manager</p>
+          <p class="card-text">David oversees daily operations and logistics.
+            His attention to detail keeps our dealership running smoothly.</p>
+          <p>david.martinez@bestcars.com</p>
         </div>
       </div>
     </div>
